tests/baselines/reference/sourceMapValidationDestructuringForArrayBindingPatternDefaultValues(target=es2015).errors.txt
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(18,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(21,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(24,10): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(27,10): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(27,13): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(33,10): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(33,13): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(39,10): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(39,13): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(46,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(49,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(52,10): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(55,10): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(58,10): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(61,10): error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(65,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(68,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(71,10): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(75,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(76,9): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(83,10): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(84,5): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(91,10): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(92,5): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(100,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(103,10): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts(106,10): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForArrayBindingPatternDefaultValues.ts (27 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, string[]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    function getRobot() {
        return robotA;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    function getMultiRobot() {
        return multiRobotA;
    }
    
    for (let [, nameA ="name"] = robotA, i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA = "name"] = getRobot(), i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA = "name"] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, [
             ~~~~
                ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = multiRobotA, i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [
             ~~~~
                ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = getMultiRobot(), i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [
             ~~~~
                ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for (let [numberB = -1] = robotA, i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB = -1] = getRobot(), i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB = -1] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [nameB = "name"] = multiRobotA, i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB = "name"] = getMultiRobot(), i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB = "name"] = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for (let [numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = robotA, i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = getRobot(), i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let
        [nameMA = "noName",
        ~~~~~~~~~~~~~~~~~~~
            [
    ~~~~~~~~~
            ~
                primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        ] = multiRobotA, i = 0; i < 1; i++) {
    ~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA = "noName",
             ~~~~~~~~~~~~~~~~~~~
        [
    ~~~~~
        ~
            primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ]  = getMultiRobot(), i = 0; i < 1; i++) {
    ~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA = "noName",
             ~~~~~~~~~~~~~~~~~~~
        [
    ~~~~~
        ~
            primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ]  = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
    ~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for (let [numberA3 = -1, ...robotAInfo] = robotA, i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3 = -1, ...robotAInfo] = getRobot(), i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3 = -1, ...robotAInfo] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }